updated style to fix issue on safari

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@
 
 .input-form {
 	width: 100%;
+	max-height: 3rem;
 	display: grid;
 	grid-template-columns: 1fr 15ch;
 	justify-content: center;
